Make Prescription Function fully works.

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -9,9 +9,114 @@
    "source": [
     "import re\n",
     "from datetime import datetime\n",
-    "\n",
+    "#Dics used:\n",
     "DPatient={\"cin\":[], \"nom\":[], \"prenom\":[], \"sexe\": [],\"age\": []}\n",
-    "rdvs={\"cin\":[], \"date\":[], \"time\":[]}"
+    "rdvs={\"cin\":[], \"date\":[], \"time\":[]}\n",
+    "\n",
+    "\n",
+    "##Repeatedly used functions:\n",
+    "def get_cin():\n",
+    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
+    "    while True:\n",
+    "        cin = input('Please enter a CIN:')\n",
+    "        if cin.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "\n",
+    "        if cin.isdigit() and len(cin) == 8:\n",
+    "            if not check_cin(cin):\n",
+    "                return cin\n",
+    "            else:\n",
+    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
+    "        else:\n",
+    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def check_cin(cin):\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def check_appointment_availability(date, time):\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if date == date_rdv and time == time_rdv:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "def check_date_availability(cin, date, time):\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin_rdv, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if cin == cin_rdv and date == date_rdv:\n",
+    "                if time == time_rdv:\n",
+    "                    return True\n",
+    "        return False\n",
+    "    \n",
+    "    \n",
+    "def check_cin_date(cin, date):\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin_rdv, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if cin == cin_rdv and date == date_rdv:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "def get_date():\n",
+    "    while True:\n",
+    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "        if date.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
+    "                if check_date(appointment_date):\n",
+    "                    return date\n",
+    "                else:\n",
+    "                    print(\"The appointment date must be in the future. Please enter a new date.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
+    "\n",
+    "def get_time(date):\n",
+    "    while True:\n",
+    "        temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "        if temps.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
+    "                return temps\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid time format. Please use the format HH:MM.\")\n",
+    "\n",
+    "\n",
+    "def get_date_noFcheck():\n",
+    "    while True:\n",
+    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "        if date.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
+    "                return date\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
+    "                \n",
+    "                \n",
+    "def check_date(appointment_date):\n",
+    "    now = datetime.now()\n",
+    "    if appointment_date < now:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n"
    ]
   },
   {
@@ -488,7 +593,130 @@
    "id": "277df86b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_prescription():\n",
+    "    cin = get_cin()\n",
+    "    if cin is None:\n",
+    "        return\n",
+    "\n",
+    "    # Retrieve the patient's appointments from the DAppointments.txt file\n",
+    "    appointments = []\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                _, date, time= line.strip().split(';')\n",
+    "                appointments.append((date, time))\n",
+    "\n",
+    "    if not appointments:\n",
+    "        print(\"No appointments found for this patient.\")\n",
+    "        return\n",
+    "\n",
+    "    # Print the list of the last 5 appointments and prompt the user to select one\n",
+    "    print(\"Select an appointment:\")\n",
+    "    for i, appointment in enumerate(appointments[-5:]):\n",
+    "        print(f\"{i+1}. {appointment[0]} at {appointment[1]}\")\n",
+    "    while True:\n",
+    "        selection = input(\"Enter the number of the appointment you want to select (or 'manual' to enter an appointment):\")\n",
+    "        if selection.lower() == \"abort\":\n",
+    "            print(\"Operation cancelled.\")\n",
+    "            return None\n",
+    "\n",
+    "        if selection.lower() == \"manual\":\n",
+    "            # Initialize a variable to track whether a valid date and time have been entered\n",
+    "            is_valid = False\n",
+    "\n",
+    "            # Prompt the user for the date and time of the appointment\n",
+    "            while not is_valid:\n",
+    "                date = get_date_noFcheck()\n",
+    "                if date is None:\n",
+    "                    return\n",
+    "\n",
+    "                # Check if the CIN and date are linked in the rdv.txt file\n",
+    "                if check_cin_date(cin, date):\n",
+    "                    time = get_time(date)\n",
+    "                    if time is None:\n",
+    "                        return\n",
+    "\n",
+    "                    # Check if the appointment already exists\n",
+    "                    if check_date_availability(cin, date, time):\n",
+    "                        # If a valid date and time have been entered, set is_valid to True and break out of the loop\n",
+    "                        is_valid = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        print(\"The appointment does not exist. Please enter a valid time.\")\n",
+    "                else:\n",
+    "                    print(\"Patient doesn't have an appointment on the that date. Please enter a valid date.\")\n",
+    "\n",
+    "            # Break out of the outer loop once a valid manual appointment has been entered\n",
+    "            break\n",
+    "        else:\n",
+    "            try:\n",
+    "                selection = int(selection)\n",
+    "                if 1 <= selection <= len(appointments[-5:]):\n",
+    "                    date, time = appointments[-selection]\n",
+    "                    break\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "            print(\"Please enter a valid input.\")\n",
+    "\n",
+    "        \n",
+    "    first_name = None\n",
+    "    last_name = None\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                _, first_name, last_name, _, _, = line.strip().split(';')\n",
+    "                break\n",
+    "\n",
+    "    # Create the filename based on the patient's first and last name\n",
+    "    filename = f\"{first_name}_{last_name}.txt\"\n",
+    "\n",
+    "    # Initialize a list to store the medication information\n",
+    "    medications = []\n",
+    "\n",
+    "    # Prompt the user for medication information\n",
+    "    while True:\n",
+    "        name = input(\"Enter the name of the medication:\")\n",
+    "        if name.lower() == \"abort\":\n",
+    "            print(\"Operation cancelled.\")\n",
+    "            return \n",
+    "        else:\n",
+    "            quantity = input(\"Enter the quantity of the medication:\")\n",
+    "            if quantity.lower() == \"abort\":\n",
+    "                print(\"Operation cancelled.\")\n",
+    "                return\n",
+    "            duration = input(\"Enter the duration of treatment with the medication:\")\n",
+    "            if duration.lower() == \"abort\":\n",
+    "                print(\"Operation cancelled.\")\n",
+    "                return\n",
+    "\n",
+    "            # Add the medication information to the list\n",
+    "            medications.append((name, quantity, duration))\n",
+    "        while True:\n",
+    "            add_more = input(\"Do you want to add a new medication? (Yes/No)\")\n",
+    "            if add_more.lower() == \"abort\":\n",
+    "                print(\"Operation cancelled.\")\n",
+    "                return \n",
+    "            elif add_more.lower() == \"yes\":\n",
+    "                break\n",
+    "            elif add_more.lower() == \"no\":\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Please enter a valid input (Yes/No)\")\n",
+    "        if add_more.lower() == \"no\":\n",
+    "            break\n",
+    "\n",
+    "    # Open the file in write mode\n",
+    "    with open(filename, 'w') as f:\n",
+    "        # Write the appointment information to the file\n",
+    "        f.write(f\"{cin} {first_name} {last_name} {date} {time}\\n\")\n",
+    "\n",
+    "        # Write the medication information to the file\n",
+    "        for medication in medications:\n",
+    "            f.write(f\"{medication[0]} {medication[1]} {medication[2]}\\n\")\n",
+    "\n",
+    "    print(\"Prescription file created successfully!\")\n"
+   ]
   }
  ],
  "metadata": {
