--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -669,7 +669,9 @@
     "                break\n",
     "\n",
     "    # Create the filename based on the patient's first and last name\n",
-    "    filename = f\"{first_name}_{last_name}.txt\"\n",
+    "    date = date.replace(\"/\", \"-\")\n",
+    "    time = time.replace(\":\", \"-\")\n",
+    "    filename = f\"{first_name}_{last_name}_{date}_{time}.txt\"\n",
     "\n",
     "    # Initialize a list to store the medication information\n",
     "    medications = []\n",
@@ -709,7 +711,9 @@
     "    # Open the file in write mode\n",
     "    with open(filename, 'w') as f:\n",
     "        # Write the appointment information to the file\n",
-    "        f.write(f\"{cin} {first_name} {last_name} {date} {time}\\n\")\n",
+    "        date = date.replace(\"-\", \"/\")\n",
+    "        time = time.replace(\"-\", \":\")\n",
+    "        f.write(f\"{cin};{first_name};{last_name};{date};{time}\\n\")\n",
     "\n",
     "        # Write the medication information to the file\n",
     "        for medication in medications:\n",
@@ -721,7 +725,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -735,7 +739,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c2987bf884b33d4ac0d131f2cc512127de39608db1d626b88cf922dfeda625a8"
+   }
   }
  },
  "nbformat": 4,
