Added Historique Function/Updated md.

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "d25152ce",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import re\n",
     "from datetime import datetime\n",
     "#Dics used:\n",
@@ -250,28 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "fbf74e71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cin():\n",
-    "    while True:\n",
-    "        cin = input('Please enter a CIN:')\n",
-    "        if cin.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return None\n",
-    "\n",
-    "        if cin.isdigit() and len(cin) == 8:\n",
-    "            if not check_cin(cin):\n",
-    "                return cin\n",
-    "            else:\n",
-    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
-    "        else:\n",
-    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
-    "\n",
-    "\n",
-    "\n",
     "def check_cin(cin):\n",
     "    with open(\"DPatient.txt\", 'r') as f:\n",
     "        for line in f:\n",
@@ -325,7 +309,6 @@
     "        return True\n",
     "\n",
     "def add_appointment():\n",
-    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
     "    cin = get_cin()\n",
     "    if cin is None:\n",
     "        return\n",
@@ -361,31 +344,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cin():\n",
-    "    while True:\n",
-    "        cin = input('Please enter a CIN:')\n",
-    "        if cin.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return None\n",
-    "\n",
-    "        if cin.isdigit() and len(cin) == 8:\n",
-    "            if not check_cin(cin):\n",
-    "                return cin\n",
-    "            else:\n",
-    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
-    "        else:\n",
-    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "def check_cin(cin):\n",
-    "    with open(\"DPatient.txt\", 'r') as f:\n",
-    "        for line in f:\n",
-    "            if cin in line:\n",
-    "                return False\n",
-    "        return True\n",
-    "\n",
-    "\n",
     "def check_appointment_availability(date, time):\n",
     "    with open(\"rdv.txt\", 'r') as f:\n",
     "        for line in f:\n",
@@ -431,7 +389,6 @@
     "        return True\n",
     "\n",
     "def edit_appointment():\n",
-    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
     "    cin = get_cin()\n",
     "    if cin is None:\n",
     "        return\n",
@@ -508,24 +465,6 @@
    "source": [
     "##New version\n",
     "\n",
-    "\n",
-    "def get_cin():\n",
-    "    while True:\n",
-    "        cin = input('Please enter a CIN:')\n",
-    "        if cin.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return None\n",
-    "\n",
-    "        if cin.isdigit() and len(cin) == 8:\n",
-    "            if not check_cin(cin):\n",
-    "                return cin\n",
-    "            else:\n",
-    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
-    "        else:\n",
-    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
-    "\n",
-    "\n",
-    "\n",
     "def check_cin(cin):\n",
     "    with open(\"DPatient.txt\", 'r') as f:\n",
     "        for line in f:\n",
@@ -535,7 +474,6 @@
     "\n",
     "\n",
     "def delete_appointment():\n",
-    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
     "    cin = get_cin()\n",
     "    if cin is None:\n",
     "        return\n",
@@ -589,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "277df86b",
    "metadata": {},
    "outputs": [],
@@ -721,11 +659,94 @@
     "\n",
     "    print(\"Prescription file created successfully!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "78a28bde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def historique_patient():\n",
+    "    cin = get_cin()\n",
+    "    if cin is None:\n",
+    "        return\n",
+    "\n",
+    "    # Create the filename based on the patient's first and last name\n",
+    "    first_name = None\n",
+    "    last_name = None\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                _, first_name, last_name, _, _, = line.strip().split(';')\n",
+    "                break\n",
+    "\n",
+    "    filename = f\"historique_{first_name}_{last_name}.txt\"\n",
+    "\n",
+    "    # Check if the historique file already exists\n",
+    "    if os.path.exists(filename):\n",
+    "        # If the historique file already exists, delete it\n",
+    "        os.remove(filename)\n",
+    "        print(\"File already exists. Original file DELETED.\")\n",
+    "\n",
+    "    # Iterate through the files in the folder\n",
+    "    files_found = False\n",
+    "    for file in os.listdir(\".\"):\n",
+    "        # Check if the file starts with the patient's first and last name\n",
+    "        if file.startswith(f\"{first_name}_{last_name}\"):\n",
+    "            files_found = True\n",
+    "            # Read the file and retrieve the patient's CIN, first and last name, date, and time\n",
+    "            with open(file, 'r') as f:\n",
+    "                cin_line = f.readline()\n",
+    "                cin, first_name, last_name, date, time = cin_line.strip().split(';')\n",
+    "\n",
+    "                # Write the patient's CIN, first and last name, date, and time to the historique file\n",
+    "                with open(filename, 'a') as historique:\n",
+    "                    historique.write(f\"{cin};{first_name};{last_name};{date};{time}\\n\")\n",
+    "\n",
+    "                    # Write the medication data to the historique file\n",
+    "                    for line in f:\n",
+    "                        historique.write(line)\n",
+    "            \n",
+    "            # Write a line of dashes to the historique file to separate the data from different appointments\n",
+    "            with open(filename, 'a') as historique:\n",
+    "                \n",
+    "                first_line_length = len(cin_line)\n",
+    "                # Write a line of dashes with the same length as the first line\n",
+    "                historique.write(\"-\" * first_line_length + \"\\n\")\n",
+    "    \n",
+    "    if not files_found:\n",
+    "        # If no files were found, print a message and abort the operation\n",
+    "        print(\"No prescription files exist. Operation aborted.\")\n",
+    "        return\n",
+    "\n",
+    "    print(\"Historique file created successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "960a189e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter 'Abort' to cancel the operation at any step!\n",
+      "Please enter a CIN:44779966\n",
+      "Historique file created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "historique_patient()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -739,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
