All Part I functions work. Plot needs fixing.

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -740,8 +740,69 @@
     }
    ],
    "source": [
-    "historique_patient()\n"
+    "def plot_consultations_per_month():\n",
+    "    # Get the patient's CIN\n",
+    "    cin = get_cin()\n",
+    "    if cin is None:\n",
+    "        return\n",
+    "\n",
+    "    # Create the filename based on the patient's first and last name\n",
+    "    first_name = None\n",
+    "    last_name = None\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                _, first_name, last_name, _, _, = line.strip().split(';')\n",
+    "                break\n",
+    "\n",
+    "    filename = f\"historique_{first_name}_{last_name}.txt\"\n",
+    "\n",
+    "    # Check if the historique file exists\n",
+    "    if not os.path.exists(filename):\n",
+    "        print(f\"Historique file for patient {first_name} {last_name} does not exist.\")\n",
+    "        return\n",
+    "\n",
+    "    # Read the historique file into a pandas DataFrame\n",
+    "    df = pd.DataFrame(columns=[\"CIN\", \"First Name\", \"Last Name\", \"Date\", \"Time\"])\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        for line in f:\n",
+    "            # Split the line into columns\n",
+    "            columns = line.strip().split(\";\")\n",
+    "            if len(columns) == 5:\n",
+    "                # Add a row to the DataFrame for this consultation\n",
+    "                df.loc[len(df)] = (columns[0], columns[1], columns[2], columns[3], columns[4])\n",
+    "\n",
+    "    # Convert the \"Date\" column to a datetime data type\n",
+    "    df[\"Date\"] = pd.to_datetime(df[\"Date\"], format=\"%d/%m/%Y\")\n",
+    "\n",
+    "    # Extract the month and year from the \"Date\" column and create new \"Month\" and \"Year\" columns\n",
+    "    df[\"Month\"] = df[\"Date\"].dt.month\n",
+    "    df[\"Year\"] = df[\"Date\"].dt.year\n",
+    "    df[\"Day\"] = df[\"Date\"].dt.day\n",
+    "    \n",
+    "    # Group the data by month\n",
+    "    monthly_groups = df.groupby(\"Month\")\n",
+    "\n",
+    "    # Iterate over the groups and plot the data for each month\n",
+    "    for name, group in monthly_groups:\n",
+    "        plt.plot(group[\"Day\"], group[\"Time\"], label=name)\n",
+    "\n",
+    "    # Add a legend and show the plot\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "    print(df)\n",
+    "    #print(consultations_per_month)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5720ffe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -760,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
