Added create DPatient file function.

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -39,6 +39,17 @@
     "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
     "\n",
     "\n",
+    "def check_and_create_file():\n",
+    "    if not os.path.exists(\"DPatient.txt\"):\n",
+    "        response = input(\"DPatient.txt file not found in current directory. Create new file (y/n)? \")\n",
+    "        if response.lower() == 'y':\n",
+    "            with open(\"DPatient.txt\", 'w') as f:\n",
+    "                print(\"New file created.\")\n",
+    "        else:\n",
+    "            print(\"Aborting.\")\n",
+    "    else:\n",
+    "        print(\"DPatient.txt file found in current directory.\")\n",
+    "\n",
     "\n",
     "def check_cin(cin):\n",
     "    with open(\"DPatient.txt\", 'r') as f:\n",
@@ -978,36 +989,38 @@
    "source": [
     "# create a dictionary to map user input to functions\n",
     "options = {\n",
-    "  1: add_patient,\n",
-    "  2: delete_patient,\n",
-    "  3: add_appointment,\n",
-    "  4: edit_appointment,\n",
-    "  5: delete_appointment,\n",
-    "  6: create_prescription,\n",
-    "  7: historique_patient,\n",
-    "  8: plot_consultations_per_month,\n",
-    "  9: plot_consultations_per_year,\n",
+    "  1: check_and_create_file,\n",
+    "  2: add_patient,\n",
+    "  3: delete_patient,\n",
+    "  4: add_appointment,\n",
+    "  5: edit_appointment,\n",
+    "  6: delete_appointment,\n",
+    "  7: create_prescription,\n",
+    "  8: historique_patient,\n",
+    "  9: plot_consultations_per_month,\n",
+    "  10: plot_consultations_per_year,\n",
     "}\n",
     "\n",
     "while True:\n",
     "  print(\"Welcome to the patient management system\")\n",
     "  print(\"Please select an option:\")\n",
-    "  print(\"1. Create patient\")\n",
-    "  print(\"2. Delete patient\")\n",
-    "  print(\"3. Add appointment\")\n",
-    "  print(\"4. Edit appointment\")\n",
-    "  print(\"5. Delete appointment\")\n",
-    "  print(\"6. Create prescription\")\n",
-    "  print(\"7. View patient history\")\n",
-    "  print(\"8. Plot consultations per month\")\n",
-    "  print(\"9. Plot consultations per year\")\n",
-    "  print(\"10. Quit\")\n",
+    "  print(\"1. Create DPatient.txt file\")\n",
+    "  print(\"2. Create patient\")\n",
+    "  print(\"3. Delete patient\")\n",
+    "  print(\"4. Add appointment\")\n",
+    "  print(\"5. Edit appointment\")\n",
+    "  print(\"6. Delete appointment\")\n",
+    "  print(\"7. Create prescription\")\n",
+    "  print(\"8. View patient history\")\n",
+    "  print(\"9. Plot consultations per month\")\n",
+    "  print(\"10. Plot consultations per year\")\n",
+    "  print(\"11. Quit\")\n",
     "  try:\n",
     "    choice = int(input(\"Enter your choice: \"))\n",
     "  except ValueError:\n",
     "    print(\"Invalid input, please try again\")\n",
     "    continue\n",
-    "  if choice == 10:\n",
+    "  if choice == 11:\n",
     "    break\n",
     "  if choice in options:\n",
     "    options[choice]()\n",
