--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d25152ce",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "f0549787",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,6 @@
     "        else:\n",
     "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
     "    \n",
-    "    # Rest of the function remains the same\n",
     "    while True:\n",
     "        nom = input('Please enter a First Name:')\n",
     "        if nom.lower() == \"abort\":\n",
@@ -199,10 +198,21 @@
     "            print(\"Invalid sex. Please enter either 'Male' or 'Female'.\")\n",
     "            \n",
     "    while True:\n",
-    "        age = input(\"Please enter the patient's age:\")\n",
+    "        age = input(\"Please enter the patient's age. Enter 'inf' for baby:\")\n",
     "        if age.lower() == \"abort\":\n",
     "            print(\"Operation aborted.\")\n",
-    "            return\n",
+    "            break\n",
+    "\n",
+    "        if age.lower() == \"inf\":\n",
+    "            while True:\n",
+    "                age = input(\"Please enter the baby's age:\")\n",
+    "                if age.isdigit() and 1 <= int(age) <= 12:\n",
+    "                    break\n",
+    "                elif age.lower() == \"abort\":\n",
+    "                    print(\"Operation aborted.\")\n",
+    "                    break\n",
+    "                else:\n",
+    "                    print(\"Invalid age. Please enter a number between 1 and 12.\")\n",
     "\n",
     "        if age.isdigit() and int(age) > 0:\n",
     "            break\n",
@@ -1031,7 +1041,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
